Fix video aspect ratio css to prevent cropping

--- a/style.css
+++ b/style.css
@@ -436,16 +436,19 @@ h1, h2, h3, h4 {
 
 .video-full-width {
     width: 100%;
-    max-height: 100vh;
-    overflow: hidden;
     position: relative;
     margin-top: 30px;
+    padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
+    height: 0;
+    overflow: hidden;
 }
 .full-width-vid {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
-    display: block;
+    border: 0;
 }
 
 /* Marquee */
